<resources>
    <string name="app_name">Tín Tốc</string>
    <string name="err_access">Không thể kết nối đến server</string>
    <string name="try_again">Thử lại</string>
    <string name="shop_online">Shop online</string>
    <string name="shop">Cửa hàng</string>
    <string name="ecommerce">Thương mại điện tử</string>
    <string name="new_order">Đơn hàng mới</string>
    <string name="following_order">theo dõi đơn hàng</string>
    <string name="email">Email</string>
    <string name="login_email">Email đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="login_by_another_account">Đăng nhập bằng tài khoản khác</string>
    <string name="not_register">Bạn chưa có tài khoản?</string>
    <string name="err_email">Vui lòng nhập email</string>
    <string name="err_pass">Vui lòng nhập mật khẩu</string>
    <string name="err_code">Vui lòng nhập lại code</string>
    <string name="forgot_pasword">Quên mật khẩu?</string>
    <string name="forgot_pass_content">Bạn hãy nhập vào email dưới đây. Chúng tôi sẽ gửi cho bạn một mất khẩu mới.</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="enter_full_info">Vui lòng điền đầy đủ các thông tin dưới đây</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="shop_name">Tên shop</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="register_password">Mật khẩu truy cập</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="address">Địa chỉ lấy hàng: số nhà, đường...</string>
    <string name="choose_city">Vui lòng chọn tỉnh/thành</string>
    <string name="choose_county">Quận/Huyện</string>
    <string name="choose_ward">Phường/Xã</string>
    <string name="captcha">Mã xác nhận</string>
    <string name="accept">Tôi đồng ý với chính sách và dịch vụ của</string>
    <string name="web_proship">Proship.vn</string>
    <string name="have_account">Bạn đã có tài khoản?</string>
    <string name="register_now">Đăng nhập ngay</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="err_name">Vui lòng nhập tên</string>
    <string name="err_phone">Vui lòng nhập số điện thoại</string>
    <string name="err_confirm_pass">Vui lòng xác nhận mật khẩu</string>
    <string name="err_password">Mật khẩu cần có ít nhất 6 ký tự</string>
    <string name="er_pass_confirm">Mật khẩu và xác nhận mật khẩu không đồng nhất</string>
    <string name="next">Tiếp</string>
    <string name="manager_order">Quản lý đơn hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_hint">Mã đơn hàng, tên người nhận, tên hàng</string>
    <string name="active_time">Thời gian hoạt động</string>
    <string name="time_main">Giờ hành chính</string>
    <string name="time_out">Ngoài giờ</string>
    <string name="filter_system">Bộ lọc</string>
    <string name="list_order">Danh sách vận đơn</string>
    <string name="date">Ngày</string>
    <string name="time">Thời gian</string>
    <string name="status">Trạng thái</string>
    <string name="home_status">Tình trạng</string>
    <string name="filter">Lọc</string>
    <string name="shop_info">Thông tin shop</string>
    <string name="income">Thu nhập</string>
    <string name="incentive">Ưu đãi</string>
    <string name="rating">Đánh giá</string>
    <string name="support">Hỗ trợ</string>
    <string name="debt">Công nợ</string>
    <string name="err_date_filter">Thời gian đến không được trước thời gian bắt đầu</string>
    <string name="home_receiver">Người nhận: </string>
    <string name="main_address">Địa chỉ: </string>
    <string name="total_income_KH">Tổng thu KH: </string>
    <string name="main_create_date">Ngày tạo: </string>
    <string name="info_order">Thông tin đơn hàng</string>
    <string name="logout_title">Bạn có muốn đăng xuất?</string>
    <string name="not_payment">Chưa thanh toán</string>
    <string name="logout">Đăng xuất</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="nav_item_activity_titles">
        <item>Shop info</item>
        <item>Income</item>
        <item>Incentive</item>
        <item>Rating</item>
        <item>Support</item>
    </string-array>
    <string name="text_1">Chúng tôi là đối tác </string>
    <string name="text_2">vận chuyển, thu nhận, giao hộ</string>
    <string name="text_3">các món hàng </string>
    <string name="text_4">nhanh chóng, uy tín </string>
    <string name="text_5">và</string>
    <string name="text_6">chi phí hợp lý </string>
    <string name="text_7">phục vụ cho</string>
    <string name="start">Bắt đầu</string>
    <string name="follow_order">Theo dõi đơn hàng</string>
    <string name="email_register">Email</string>
    <string name="password_register">Mật khẩu</string>
    <string name="quick_register">Đăng ký nhanh</string>
    <string name="enter_order_code">Nhập mã đơn hàng</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="sign_up_success">Đăng nhập thành công</string>
    <string name="nav_home">Home</string>
    <string name="nav_shop_info">Shop info</string>
    <string name="nav_income">Income</string>
    <string name="nav_incentive">Incentive</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_support">Support</string>
    <string name="confirm">Xác nhận</string>
    <string name="info">Thông tin</string>
    <string name="code">Mã shop</string>
    <string name="name">Tên shop</string>
    <string name="place">Địa chỉ</string>
    <string name="update_info_success">Cập nhật thông tin thành công</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="re_new_pass">Xác nhận mật khẩu mới</string>
    <string name="err_old_pass">Vui lòng nhập mật khẩu cũ</string>
    <string name="err_new_pass">Vui lòng nhập mật khẩu mới</string>
    <string name="err_confirm_new_pass">Vui lòng xác nhận mật khẩu mới</string>
    <string name="err_old_new">Mật khẩu mới và xác nhận mật khẩu không đồng nhất</string>
    <string name="err_6_char">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="change_pass_success">Thay đổi mật khẩu thành công"</string>
    <string name="number_acc_bank">Số tài khoản</string>
    <string name="name_acc_bank">Tên tài khoản</string>
    <string name="bank">Ngân hàng</string>
    <string name="info_get_order">Thông tin lấy hàng</string>
    <string name="sender_name">Tên người gửi</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="edit_address">Chỉnh sửa</string>
    <string name="update_address_success">Cập nhật địa chỉ thành công</string>
    <string name="add_address_success">Thêm địa chỉ thành công</string>
    <string name="err_shop_name">Vui lòng nhập tên shop</string>
    <string name="err_phone_num">Vui lòng nhập số điện thoại</string>
    <string name="err_address">Vui lòng nhập địa chỉ</string>
    <string name="err_region">Vui lòng nhập tỉnh thành</string>
    <string name="choose">Chọn</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="create_date_list">Ngày tạo</string>
    <string name="create_delivery_list">Ngày giao</string>
    <string name="payed">Đã thanh toán</string>
    <string name="not_pay">Chưa thanh toán</string>
    <string name="num_order">Số lượng đơn hàng</string>
    <string name="income_cod">Thu hộ(COD)</string>
    <string name="fee_ship">Phí ship</string>
    <string name="total">Tổng cộng</string>
    <string name="see_detail">Xem chi tiết</string>
    <string name="total_value">Tổng giá trị</string>
    <string name="total_income">Tổng thu</string>
    <string name="total_saf">Tổng chi</string>
    <string name="err_time">Vui lòng chọn thời gian</string>
    <string name="debt_address">Địa chỉ</string>
    <string name="total_fee">Tổng phí</string>
    <string name="type">Hình thức</string>
    <string name="total_debt">Tổng công nợ:</string>
    <string name="compared">Đã đối soát</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="rate_shipper">Đánh giá shipper</string>
    <string name="note">Ghi chú:</string>
    <string name="send">Gửi</string>
    <string name="cancel">Hủy</string>
    <string name="hint_feedback">Ý kiến của bạn giúp chúng tôi cải thiện dịch vụ.</string>
    <string name="shipper_mood">Thái độ shipper</string>
    <string name="time_ship">Thời gian giao</string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="address_customer">Địa chỉ giao hàng</string>
    <string name="hint_region">Tỉnh/Thành - Quận/Huyện - Phường/Xã</string>
    <string name="viettel_post">Giao hàng tận nơi</string>
    <string name="send_vehicle">Gửi nhà xe</string>
    <string name="commodity_info">Thông tin hàng hóa</string>
    <string name="create_order">Tạo đơn</string>
    <string name="create_order_bill">Tạo đơn hàng</string>
    <string name="commodity_type">Loại hàng hóa</string>
    <string name="commodity_weight">Cân nặng</string>
    <string name="charge_side">Trả phí vận chuyển</string>
    <string name="service_fee">Phí dịch vụ</string>
    <string name="shipping_fee">Phí vận chuyển</string>
    <string name="enter_note">Nhập ghi chú tùy chọn</string>
    <string name="alert_mediate_fee">(!) Quý khách có thể phải chịu phí trung gian</string>
    <string name="alert_sub_fee">(!) Hàng hóa của quý khách sẽ bị tính thêm phụ phí</string>
    <string name="vehicle_note">Ghi chú nhà xe</string>
    <string name="choose_servive">Chọn dịch vụ</string>
    <string name="choose_container_service">Chọn dịch vụ vận chuyển</string>
    <string name="transport_service">Dịch vụ vận chuyển</string>
    <string name="package_delivery">Gói vận chuyển</string>
    <string name="mediate_fee">Phí trung gian</string>
    <string name="commodity_fee">Giá trị hàng hóa</string>
    <string name="insurance_fee">Phí bảo hiểm</string>
    <string name="side_pay">Bên trả phí:</string>
    <string name="sender">Thông tin người gửi</string>
    <string name="receiver">Thông tin người nhận</string>
    <string name="added_service">Dịch vụ gia tăng</string>
    <string name="reason">Lý do</string>
    <string name="photo">Hình ảnh</string>
    <string name="delivery_date">Ngày giao hàng</string>
    <string name="receive_date">Ngày nhận hàng</string>
    <string name="delivery_time">Thời gian giao hàng</string>
    <string name="container_type">Hình thức vận chuyển</string>
    <string name="see_commodity">Xem hàng</string>
    <string name="exchange">Đổi trả</string>
    <string name="allow_see_order">Cho xem hàng</string>
    <string name="change_commodity">Đổi hàng/lấy hàng về</string>
    <string name="note_change_order">Nội dung hàng lấy về</string>
    <string name="protect_commodity">Bảo hiểm hàng hóa</string>
    <string name="err_sender_name">Vui lòng nhập tên người gửi</string>
    <string name="err_sender_phone">Vui lòng nhập số điện thoại người gửi</string>
    <string name="err_sender_address">Vui lòng nhập địa chỉ người gửi</string>
    <string name="err_receiver_name">Vui lòng nhập tên người nhận</string>
    <string name="err_receiver_phone">Vui lòng nhập số điện thoại người nhận</string>
    <string name="support_center">Trung tâm hỗ trợ</string>
    <string name="hotline_number">0938264867</string>
    <string name="hotline_number_2">0934038880</string>
    <string name="support_content">Nội dung cần hỗ trợ hoặc phản hồi</string>
    <string name="feedback">Phản hồi</string>
    <string name="send_request">Gửi yêu cầu</string>
</resources>