<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_edit_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_confirm" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/gray_main_border_square_box"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="26dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_confirm" />

            <vn.app.tintoc.control.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:text="Thông tin lấy hàng"
                android:textAllCaps="true"
                android:textColor="@color/colorShopInfoOne"
                android:textSize="16sp"
                app:font_family="segoe_bold" />

            <vn.app.tintoc.control.MyTextView
                android:id="@+id/txt_address_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:text="@string/place"
                android:textColor="@color/new_color_text"
                android:textSize="14sp"
                app:font_family="segoe_semi_bold" />

            <vn.app.tintoc.control.MyEditText
                android:id="@+id/edt_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:imeOptions="actionNext"
                android:background="@drawable/gray_edittext_border_square_box"
                android:inputType="text"
                android:hint="@string/shop_name"
                android:textSize="14sp"
                android:textColor="@color/new_color_text"
                app:font_family="segoe_regular"/>

            <vn.app.tintoc.control.MyEditText
                android:id="@+id/edt_shop_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:imeOptions="actionNext"
                android:background="@drawable/gray_edittext_border_square_box"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:textSize="14sp"
                android:textColor="@color/new_color_text"
                app:font_family="segoe_regular"/>

            <vn.app.tintoc.control.MyEditText
                android:id="@+id/edt_shop_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@drawable/gray_edittext_border_square_box"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/address"
                android:textSize="14sp"
                android:textColor="@color/new_color_text"
                app:font_family="segoe_regular"/>

            <vn.app.tintoc.control.MyTextView
                android:id="@+id/txt_shop_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:background="@drawable/gray_edittext_border_square_box"
                android:hint="@string/hint_region"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/txt_title"
                android:textSize="14sp"
                app:font_family="segoe_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <vn.app.tintoc.control.MyButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="32dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textColor="@color/mdtp_white"
                    android:background="@color/gray_transparent_main"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintoc.control.MyButton
                    android:id="@+id/btn_send"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/send"
                    android:textSize="16sp"
                    android:textColor="@color/mdtp_white"
                    android:background="@color/colorShopInfoTwo"
                    app:font_family="segoe_semi_bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>